<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.imalok.alokportfolio.EducationFragment">


    <android.support.v7.widget.CardView
        app:cardElevation="12dp"
        android:layout_margin="10dp"
        android:id="@+id/firstCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/college"
            android:textSize="17dp"
            android:textColor="#000"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/education1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardElevation="12dp"
        android:layout_margin="10dp"
        android:layout_below="@id/firstCard"
        android:id="@+id/secondCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/high-school"
            android:textSize="17dp"
            android:textColor="#000"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/education2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardElevation="12dp"
        android:layout_margin="10dp"
        android:layout_below="@id/secondCard"
        android:id="@+id/thirdCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/school"
            android:textSize="17dp"
            android:textColor="#000"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/education3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </android.support.v7.widget.CardView>

</RelativeLayout>
